# Software-Platform--cpp-challenge

./: README.md
draftImplementation/: CMakeLists.txt  main.cpp  word.h  word_parser.cpp  word_parser.h
draftImplementation/include/: word.h  word_parser.h
draftImplementation/src/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  word_parser.cpp  word_parser.h
draftImplementation/src/src/: Makefile  cmake_install.cmake
